<resources>
    <string name="app_name">르뷰</string>
    <string name="rewview_scheme">rewview_app_scheme</string>
    <string name="rewview_scheme_host_campaign">CAMPAIGN</string>
    <string name="rewview_scheme_host_magazine">MAGAZINE</string>
    <string name="rewview_scheme_host_exhibition">EXHIBITION</string>
    <string name="rewview_scheme_host_review">REVIEW</string>
    <string name="rewview_scheme_host_mycash">MYCASH</string>
    <string name="rewview_scheme_host_inquiry">INQUIRY</string>
    <string name="rewview_scheme_host_talk">TALK</string>
    <string name="rewview_scheme_host_special_review">SREVIEW</string>
    <string name="rewview_scheme_host_notice">NOTICE</string>
    <string name="rewview_scheme_host_mypage">MYPAGE</string>
    <string name="rewview_scheme_host_withdrawal">WITHDRAWAL</string>
    <string name="rewview_scheme_host_sns__youtube_connect">SNS_YOUTUBE_CONNECT</string>
    <string name="facebook_app_id">2646897672146079</string>
    <string name="fb_login_protocol_scheme">fb2646897672146079</string>
    <string name="facebook_client_token">80200fcbd07df66e0beaa7be60f10295</string>
    <string name="admob_ad_id">ca-app-pub-7342531265062521~4649707438</string>
    <string name="campaign">Campaign</string>
    <string name="campaign_kr">캠페인</string>
    <string name="review">Review</string>
    <string name="review_kr">리뷰</string>
    <string name="talk">TODAY\'s TALK</string>
    <string name="magazine">Magazine</string>
    <string name="magazine_kr">매거진</string>
    <string name="mypage_kr">마이페이지</string>
    <string name="mypage">My Page</string>
    <string name="store">Store</string>
    <string name="store_kr">스토어</string>
    <string name="list_no_data">조회된 데이터가 없습니다.</string>
    <string name="list_error">문제가 발생했습니다.</string>
    <string name="list_use_1_no_data">최근 1개월간 적립/사용 내역이 없습니다.</string>
    <string name="list_use_2_no_data">조회조건에 맞는 내역이 없습니다.</string>
    <string name="list_user_review_no_data">리뷰가 없습니다.</string>
    <string name="list_review_1_no_data">내 리뷰 모아보기</string>
    <string name="list_review_2_no_data">첫 리뷰를 작성해보세요.\n리뷰를 작성하면 르뷰 점수가 UP!</string>
    <string name="list_mission_1_no_data">내 미션 모아보기</string>
    <string name="list_mission_2_no_data">르뷰 활동의 첫 걸음!\n캠페인에 응모하고 미션 리뷰를 작성해보세요.</string>
    <string name="list_gift_1_no_data">내 선물 모아보기</string>
    <string name="list_gift_2_no_data">수시로 업데이트 되는 캠페인에 주목해 주세요!\n다양한 선물을 받을 기회가 주어집니다.</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="complete">완료</string>
    <string name="save">저장</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="use">사용하기</string>
    <string name="expire">기간만료</string>
    <string name="buy">구매하기</string>
    <string name="share">공유하기</string>
    <string name="auth">인증하기</string>
    <string name="go_auth">인증하러 가기</string>
    <string name="copy">COPY</string>
    <string name="all">ALL</string>
    <string name="reward">REWARD</string>
    <string name="skip">SKIP</string>
    <string name="photo_leader">대표사진으로 지정</string>
    <string name="search_brand_hint">찾으시는 브랜드가 없으신가요?</string>
    <string name="request_brand_hint">등록요청 후 일주일 내에 업데이트 됩니다.</string>
    <string name="gesetzlicher_vertreter">법정대리인의 인증 번호 신청</string>
    <string name="posting_complete">포스팅 완료</string>
    <string name="auth_complete">인증완료</string>
    <string name="recruitment_campaign">모집 중 캠페인</string>
    <string name="all_campaign">모든 캠페인</string>
    <string name="origin_price">정상가</string>
    <string name="unit_won">원</string>
    <string name="time_attack">타임\n세일</string>
    <string name="remain_time">남은시간</string>
    <string name="group_buying">르뷰\n공구</string>
    <string name="option">옵션</string>
    <string name="cart">장바구니</string>
    <string name="join_complete">가입완료</string>
    <string name="more">더보기</string>
    <string name="quiz">Q. 랑콤 알솔뤼 루즈 루비 크림의 #01호 색상은 RED RUBY이다!</string>
    <string name="quiz2">Q. 보자마자 여름이 떠오르는 마르니의 뉴 백 이름은 무엇일까요?</string>
    <string name="instagram_login">인스타그램 로그인</string>
    <string name="instagram_login_content">1. 인스타그램 홈페이지나 앱 로그아웃\n2. 르뷰 홈페이지 > 프로필 > SNS 연동 접속\n3. 인스타그램 클릭\n4. 새로운 계정으로 로그인\n5. \'작성완료\' 버튼을 클릭하면 새로운 계정 저장 완료!</string>
    <string name="facebook_login">페이스북 로그인</string>
    <string name="facebook_login_content">1. 인스타그램 홈페이지나 앱 로그아웃\n2. 르뷰 홈페이지 > 프로필 > SNS 연동 접속\n3. 인스타그램 클릭\n4. 새로운 계정으로 로그인\n5. \'작성완료\' 버튼을 클릭하면 새로운 계정 저장 완료!</string>
    <string name="email_login">이메일 로그인</string>
    <string name="email_login_content">1. 인스타그램 홈페이지나 앱 로그아웃\n2. 르뷰 홈페이지 > 프로필 > SNS 연동 접속\n3. 인스타그램 클릭\n4. 새로운 계정으로 로그인\n5. \'작성완료\' 버튼을 클릭하면 새로운 계정 저장 완료!</string>
    <string name="email_inquiry">메일로 문의하기</string>
    <string name="email">이메일</string>
    <string name="agree_1_text">[필수] 이용약관에 동의합니다.</string>
    <string name="agree_3_text">[필수] 개인정보 수집·이용에 동의합니다. </string>
    <string name="agree_4_text">[선택] 마케팅활용에 동의합니다.</string>
    <string name="agree_14_years_text">[필수] 만 14세 이상입니다.</string>
    <string name="agree_content_view"><u>내용보기</u></string>
    <string name="agree_1_msg">[필수] 만 14세 이상</string>
    <string name="agree_2_msg">[필수] 이용약관에 동의</string>
    <string name="agree_3_msg">[필수] 개인정보 수집 ∙ 이용에 동의</string>
    <string name="agree_4_msg">[선택] 협찬 제안 정보 수신에 동의</string>
    <string name="login_email_user_id_required">이메일 주소를 입력해주세요.</string>
    <string name="login_email_user_id_invalid">이메일 계정 형식이 올바르지 않습니다.</string>
    <string name="login_email_user_pw_required">비밀번호를 입력해주세요.</string>
    <string name="find_password_title">비밀번호를 잊으셨나요?</string>
    <string name="find_password_desc">아래 내용을 입력해주세요.</string>
    <string name="find_password_id_hint">아이디 입력</string>
    <string name="find_password_name_hint">이름 입력</string>
    <string name="find_password_phone_hint">전화번호 입력</string>
    <string name="find_password_email_submit">이메일 발송</string>
    <string name="coupon_use_title">쿠폰 사용하기</string>
    <string name="coupon_use_hint">직원 비밀번호 입력</string>
    <string name="coupon_use_end">사용이 완료된 쿠폰입니다.</string>
    <string name="coupon_use_expire">기간이 만료된 쿠폰입니다.</string>
    <string name="find_id_title">아이디를 잊으셨나요?</string>
    <string name="find_id_desc">아래 내용을 입력해주세요.</string>
    <string name="find_id_name_hint">이름 입력</string>
    <string name="find_id_phone_hint">전화번호 입력</string>
    <string name="find_id_sns">SNS 가입 아이디 찾기</string>
    <string name="find_id_password">비밀번호 찾기</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_sns_title">아이디를 잊으셨나요?</string>
    <string name="find_sns_desc">페이스북이나 인스타그램으로 연동하여 기입한 경우\n르뷰 아이디는 숫자로 표시됩니다.</string>
    <string name="find_sns_name_hint">이름 입력</string>
    <string name="find_sns_phone_hint">전화번호 입력</string>
    <string name="find_sns_result"><![CDATA[회원님의 아이디는 %1$s 입니다.<br>내 아이디를 복사하여 로그인을 진행해주세요.]]></string>
    <string name="find_sns_result_2"><![CDATA[회원님의 아이디는 %1$s 입니다.<br>SNS 계정으로 가입하셨으므로, 이메일로 로그인하실 수 없습니다. 처음으로 가신 후, SNS 계정으로 시작하여 로그인을 해 주세요]]></string>
    <string name="find_sns_copy">내 아이디 복사하기</string>
    <string name="find_sns_login">로그인 하러가기</string>
    <string name="my_page_follow">팔로워</string>
    <string name="my_page_profile_edit">프로필 편집</string>
    <string name="my_page_score_unit">점</string>
    <string name="my_page_review">내 리뷰</string>
    <string name="my_page_mission">미션 현황</string>
    <string name="my_page_coupon">선물함</string>
    <string name="gift_use">사용처</string>
    <string name="gift_notice">유의사항</string>
    <string name="gift_use_method">사용방법</string>
    <string name="setting_password_change">비밀번호 변경</string>
    <string name="setting_recommend">좋아요</string>
    <string name="setting_sns">SNS 연결</string>
    <string name="setting_delivery_info">배송지 설정</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_notification">알림 설정</string>
    <string name="setting_faq">FAQ</string>
    <string name="setting_inquiry">문의하기</string>
    <string name="setting_inquiry_1_1">1:1문의</string>
    <string name="setting_partner">광고/제휴문의</string>
    <string name="setting_withdraw">회원탈퇴</string>
    <string name="setting_terms">이용약관</string>
    <string name="setting_privacy">개인정보처리방침</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_logout_complete">로그아웃되었습니다.</string>
    <string name="notification_title">르뷰의 새로운 알림과 내 소식을 한 눈에 확인해보세요.</string>
    <string name="notification_campaign">CAMPAIGN</string>
    <string name="notification_notice">NOTICE</string>
    <string name="notification_cash">CASH</string>
    <string name="campaign_join_ok">캠페인 신청완료</string>
    <string name="campaign_join_end">모집종료</string>
    <string name="campaign_join_cancel">신청취소</string>
    <string name="first_come_first_served_end">선착순 종료</string>
    <string name="campaign_info_1">모집기간</string>
    <string name="campaign_info_7">설문기간</string>
    <string name="campaign_share_title">캠페인 공유하기</string>
    <string name="campaign_share_desc">캠페인을 공유하면 당첨 확률이 높아져요!</string>
    <string name="campaign_share_copy">URL 복사하기</string>
    <string name="address_search">주소검색</string>
    <string name="address_insert_hint">입력하신 주소는 기본 배송지로 설정됩니다.</string>
    <string name="address_insert_hint_2">입력하신 주소는 기본배송지로 설정됩니다.</string>
    <string name="reward_campaign_join">참여하기</string>
    <string name="reward_campaign_tag">해시태그</string>
    <string name="reward_campaign_check_all">전체선택</string>
    <string name="reward_campaign_request_end">모집이 마감된 캠페인입니다.</string>
    <string name="reward_campaign_request_already_point">이미 적립 완료된 캠페인 입니다.</string>
    <string name="reward_campaign_request_title">안내사항</string>
    <string name="reward_campaign_request_information">르뷰캐시는 캠페인 완료 15일 이후 적립되며, 적립된 르뷰캐시는 르뷰스토어에서 사용 가능합니다. 이벤트는 전체 공개 계정으로만 참여 가능하며, 아이폰 유저는 메일을 통해 영상을 다운받을 수 있습니다.</string>
    <string name="reward_campaign_request_download_image">이미지 다운로드</string>
    <string name="reward_campaign_request_download_video">영상 다운로드</string>
    <string name="reward_campaign_request_download_android">안드로이드 전용</string>
    <string name="reward_campaign_request_download_ios">아이폰 전용</string>
    <string name="reward_campaign_request_upload">업로드 인증하기</string>
    <string name="reward_campaign_request_upload_desc">리워드 영상을 공유한 인스타그램 게시물을 꼭 인증해주세요!</string>
    <string name="reward_campaign_request_file_empty">다운 받을 파일이 없습니다.</string>
    <string name="review_mission">미션 리뷰</string>
    <string name="review_basic">일반 리뷰</string>
    <string name="review_product">구매 리뷰</string>
    <string name="review_filter_content">프로필을 완성시키면 더 정확한 리뷰를 확인할 수 있습니다</string>
    <string name="review_filter_reset">초기화</string>
    <string name="review_filter_my">내 타입</string>
    <string name="review_filter_all">전체</string>
    <string name="review_filter_beauty">뷰티</string>
    <string name="review_filter_fashion">패션</string>
    <string name="review_filter_life">라이프</string>
    <string name="review_filter_fb">F&amp;B</string>
    <string name="review_filter_etc">기타</string>
    <string name="review_filter_category">카테고리</string>
    <string name="review_filter_rating">평점순</string>
    <string name="review_filter_rating_high">높은순</string>
    <string name="review_filter_rating_low">낮은순</string>
    <string name="review_filter_date_term">기간</string>
    <string name="review_filter_date_term_new">최신순</string>
    <string name="review_filter_recommend">추천순</string>
    <string name="review_filter_age">연령</string>
    <string name="review_filter_age_10">10대</string>
    <string name="review_filter_age_20">20대</string>
    <string name="notice_title_activity_log">활동내역</string>
    <string name="notice_title_notice">공지사항</string>
    <string name="title_activity_notice">알림</string>
    <string name="rewview_store">르뷰스토어</string>
    <string name="vogue">보그</string>
    <string name="allure">얼루어</string>
    <string name="w">더블유</string>
    <string name="gq">지큐</string>
</resources>