<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_campaign"
        android:icon="@drawable/ic_campaign"
        android:title="@string/campaign_kr" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_review"
        android:title="@string/review_kr" />

    <item
        android:id="@+id/navigation_magazine"
        android:icon="@drawable/ic_magazine"
        android:title="@string/magazine_kr" />

    <item
        android:id="@+id/navigation_rewview_store"
        android:icon="@drawable/ic_store"
        android:title="@string/rewview_store" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_profile"
        android:title="@string/mypage_kr" />

</menu>