<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_campaign">

    <fragment
        android:id="@+id/navigation_campaign"
        android:name="kr.co.rewview.clone.ui.fragment.CampaignFragment"
        android:label="@string/campaign_kr"
        tools:layout="@layout/fragment_campaign" />

    <fragment
        android:id="@+id/navigation_review"
        android:name="kr.co.rewview.clone.ui.fragment.ReviewFragment"
        android:label="@string/review_kr"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/navigation_magazine"
        android:name="kr.co.rewview.clone.ui.fragment.MagazineFragment"
        android:label="@string/magazine_kr"
        tools:layout="@layout/fragment_magazine" />

    <fragment
        android:id="@+id/navigation_rewview_store"
        android:name="kr.co.rewview.clone.ui.fragment.StoreFragment"
        android:label="@string/rewview_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="kr.co.rewview.clone.ui.fragment.MyPageFragment"
        android:label="@string/mypage_kr"
        tools:layout="@layout/fragment_mypage" />

</navigation>