<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="kr.co.kodc.rewview.ui.main.NoticeActivity"
        >


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.NoActionBar.AppBarOverlay"
            app:elevation="0dp"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
                >

                <TextView
                    style="@style/Text_36_000000_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_activity_notice"
                    />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_77"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:id="@+id/ll_activity_log"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/tv_activity_log"
                        style="@style/Text_28_000000"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="@dimen/px_20"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/notice_title_activity_log"
                        />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_notice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tv_notice"
                            style="@style/Text_28_000000"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/notice_title_notice"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>